fix 17066479: changed overflow hidden to scroll; added screen size dependent styling

--- a/src/SfxWeb/src/Styles/_tiles.scss
+++ b/src/SfxWeb/src/Styles/_tiles.scss
@@ -66,8 +66,11 @@ $tile-width: 240px;
   width: 100%;
   display: grid;
   grid-auto-flow: dense;
-  grid-template-columns: repeat(auto-fit, $tile-width);
   grid-gap: 10px;
   grid-auto-rows: 150px;
   margin-bottom: 15px;
+
+  @media (min-width: 450px){
+    grid-template-columns: repeat(auto-fit, $tile-width);
+  }
 }
